background and mozilla scrollbar fix

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -709,6 +709,9 @@ body
 .invisible-scrollbar-wrapper ::-webkit-scrollbar
   width: 0px
   background: transparent  
+.invisible-scrollbar-wrapper section
+  -ms-overflow-style: none 
+  scrollbar-width: none
   
 .feedback
   padding-bottom: 175px
@@ -734,7 +737,7 @@ body
     
     
 .contact
-  background-image: url('../img/hero.jpg')
+  background-image: url('../img/bg-fb.png')
   background-size: cover
   background-position: center center  
   .container
